--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 header {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  margin: 38px auto;
+  justify-content: space-between;
+  margin: 38px 200px;
 }
 
 .download-resume button{
@@ -89,6 +89,10 @@ color: white;
 font-weight: 600;
 font-size: 20px;
 background: rgb(13, 19, 33);
+}
+a{
+text-decoration: none;
+
 }
 section{
   margin:148px;
