--- a/style.css
+++ b/style.css
@@ -5,99 +5,84 @@
   box-sizing: border-box;
   font-family: "Azeret Mono", monospace;
 }
-
+/* --------Header Section--------- */
+/* --------Main Section--------- */
+/* --------Footer Section--------- */
 header {
+}
+header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 38px 200px;
+  padding: 36px 150px;
+  border: 1px solid #ff0000;
 }
-
-.download-resume button{
+header nav h1 {
+  font-size: 28px;
+  font-weight: 800;
+}
+header nav button {
   color: rgb(13, 19, 33);
   font-family: Azeret Mono;
   font-size: 20px;
   font-weight: 600;
-  line-height: 23px;
-  letter-spacing: 0%;
-  text-align: center;
   padding: 17px 24px;
   border-radius: 5px;
 }
-/* Hero-bg */
-.hero {
+/* --------Header Banner Section--------- */
+.banner {
   background-image: url("./assets/Hero-bg.png");
-  position: absolute;
   width: 100vw;
   height: 652px;
-  left: 0;
-  right: 0;
-  top: 131px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.hero-content {
-  position: absolute;
-  width: 998px;
-  height: 582px;
+.banner-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0px;
-  background: #f1eaea;
+  margin: 25px 220px;
 }
-.hero-detail {
-  display: flex;
-  flex-direction: column;
-
-  justify-content: center;
-  align-items: center;
-}
-.hero-content img {
+.banner-content img {
   height: 240px;
   width: 240px;
-  margin-bottom: 32px;
 }
-.hero-content h1 {
-color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 48px;
-font-weight: 800;
-line-height: 68px;
-letter-spacing: 0%;
-text-align: center;
+.banner-text{
+  margin: 32px 0;
 }
-p{
-  color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-letter-spacing: 0%;
-text-align: center;
+.banner-text h1 {
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 68px;
+  text-align: center;
+  margin-bottom: 24px;
 }
-.btn {
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 21px 24px 21px 24px;
-margin: 32px 0px;
-border-radius: 8px;
-color: white;
-font-weight: 600;
-font-size: 20px;
-background: rgb(13, 19, 33);
+.banner-text p {
+  color: #0d1321;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: center;
+  opacity: 0.7;
 }
-a{
-text-decoration: none;
+.banner-content a .btn{
+  color: white;
+  background: rgb(13, 19, 33);
+  font-size: 20px;
+  font-weight: 600;
+  padding: 21px 24px;
+  border-radius: 8px;
+}
 
+/* --------Why Web Development--------- */
+.web-dev{
+  margin: 80px 150px;
+  padding: 80px;
+  text-align: center;
+  background: #f4f2f289;
 }
-section{
-  margin:148px;
-}
-.section2{
-  border-radius: 16px;
-background: rgba(13, 19, 33, 0.02);
+.web-dev .description h1{
+  font-size: 32px;
 }
