--- a/style.css
+++ b/style.css
@@ -6,16 +6,11 @@
   font-family: "Azeret Mono", monospace;
 }
 /* --------Header Section--------- */
-/* --------Main Section--------- */
-/* --------Footer Section--------- */
-header {
-}
 header nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 36px 150px;
-  border: 1px solid #ff0000;
 }
 header nav h1 {
   font-size: 28px;
@@ -49,8 +44,9 @@ header nav button {
   height: 240px;
   width: 240px;
 }
-.banner-text{
+.banner-text {
   margin: 32px 0;
+  text-align: center;
 }
 .banner-text h1 {
   font-size: 48px;
@@ -67,7 +63,7 @@ header nav button {
   text-align: center;
   opacity: 0.7;
 }
-.banner-content a .btn{
+.banner-content a .btn {
   color: white;
   background: rgb(13, 19, 33);
   font-size: 20px;
@@ -77,12 +73,95 @@ header nav button {
 }
 
 /* --------Why Web Development--------- */
-.web-dev{
+/* main{
+  width: 1440px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
+.web-dev {
   margin: 80px 150px;
   padding: 80px;
-  text-align: center;
-  background: #f4f2f289;
+  border-radius: 16px;
+  
+  background: rgba(13, 19, 33, 0.02);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
 }
-.web-dev .description h1{
+.web-dev .description {
+  margin: 0;
+  text-align: center;
+}
+.web-dev .description h2 {
   font-size: 32px;
+}
+.web-dev .cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+.web-dev .cards .card {
+  padding: 48px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 16px;
+  background: linear-gradient(90deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
+}
+.card-text {
+  width: 477px;
+  margin-right: 70px;
+}
+.card-text h3 {
+  font-size: 24px;
+  font-weight: 700;
+}
+.card-text p {
+  opacity: 0.7;
+  margin: 16px 0 32px 0;
+}
+.card-text button {
+  padding: 12px;
+  font-size: 20px;
+  font-weight: 500;
+}
+.card img {
+  height: 240px;
+  width: 240px;
+  justify-content: flex-end;
+}
+/* Exceptional */
+.web-dev .cards .card2 {
+  background: linear-gradient(270deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+/* --------- My Inspiration  -------*/
+.my-inspiration {
+  background: #fff;
+  margin: 80px 150px;
+  text-align: center;
+}
+.my-inspiration .banner-text {
+  margin-bottom: 32px;
+}
+.my-inspiration h2 {
+  margin-bottom: 24px;
+  text-align: center;
+}
+
+.video-card {
+  padding: 32px;
+  border-radius: 16px;
+  border: 1px solid rgba(13, 19, 33, 0.2);
+}
+iframe{
+  height: 550px;
+  width: 100%;
+}
+.target-section{
+  margin: 150px 150px 0 150px;
 }
