--- a/style.css
+++ b/style.css
@@ -284,14 +284,32 @@ a {
   padding: 19px 20px;
   align-items: center;
 }
-input[type=text]:focus{
+input[type="text"]:focus {
   outline: none;
 }
-.contact-form button{
+.contact-form button {
   font-size: 20px;
-font-weight: 600;
+  font-weight: 600;
   padding: 17px 20px;
   border-radius: 8px;
-background: #fff;
+  background: #fff;
+}
 
+/* footer section */
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 32px 150px;
+  border-radius: 16px;
+background: rgba(13, 19, 33, 0.03);
+}
+.footer-container h4 {
+  font-size: 20px;
+  font-weight: 600;
+}
+.icon-box {
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
